syntax = "proto3";

package ocpcnovel;

message SingleUnit {
    string unitid = 1;
    double kvalue = 2;
    double cpaHistory = 3;
    int64 cvr2Cnt = 4;
    int64 cvr3Cnt = 5;
    double cpa3History = 6;
    int32 conversiongoal = 7;
    string flag = 8;
    double postcvr2 = 9;
    double postcvr3 = 10;
    double cvrfactor = 11;
    double avgbid = 12;
    double maxbid = 13;
}


message OcpcNovelList {
    repeated SingleUnit adunit = 1;
}
